# smm_planner_project

backend/: .gitignore  Dockerfile  arq_runner.py  docker-compose.yaml  docker-compose.yaml.save  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bde486277c7_first_db_creation.py  0dedceacc042_first_db_creation.py  0fe56545079e_first_db_creation.py  1a9318f21e8b_first_db_creation.py  2be15bf86d4d_first_db_creation.py  5cc2327ce0b9_first_db_creation.py  642b433cdd6e_first_db_creation.py  666a34a0a34c_first_db_creation.py  768e274d8ab8_first_db_creation.py  7ff6412f3869_first_db_creation.py  81fe0dabe474_first_db_creation.py  8f910f9d0719_first_db_creation.py  8ff07b363b81_first_db_creation.py  9447b13f70e3_first_db_creation.py  991036d47df5_first_db_creation.py  9a86c02350a1_first_db_creation.py  9d526c61dca2_first_db_creation.py  a3ef727cdf02_first_db_creation.py  aa65a6870dbe_first_db_creation.py  ae8ee6800d5f_first_db_creation.py  b36c955db40b_first_db_creation.py  bc332349993a_first_db_creation.py  bf271bf9ab24_first_db_creation.py  c68273ca9fc4_first_db_creation.py  c7a3ed9690f2_first_db_creation.py  c95ff3864e83_first_db_creation.py  cf9308b5d1bb_post_plain_text.py  cfa237f3916d_postfiles_save_result.py  d95b7b3f658f_first_db_creation.py  dcc6791080f8_user.py  e26a67f6b96d_first_db_creation.py  e5bd973853dc_first_db_creation.py  fb789a3c8831_first_db_creation.py
backend/app/: arq_runner.py  definitions.py  entrypoint.sh  fusionbrain_ai_test.py  main.py  tests.py
backend/app/api/: deps.py
backend/app/db/: base.py  (+2 more)
backend/g4f/: __init__.py
(+222 files in other folders)
